<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_lavender_to_orange"
    android:orientation="vertical">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_button"
            style="@style/SecondaryTitle"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"

            android:clickable="true"
            android:gravity="end"

            android:text="@string/login_button" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_textview"
            style="@style/AccentTitle"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:gravity="center"

            android:paddingTop="60dp"

            android:text="@string/sign_up_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/login_edittext"
            style="@style/whiteEdittext"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/auth_edittext"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/auth_edittext"

            android:hint="@string/login_hint"
            android:inputType="textEmailAddress|textPersonName"
            android:lines="1"

            android:maxLines="1"
            android:paddingStart="@dimen/start_text_edittext" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_edittext"
            style="@style/whiteEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/auth_edittext"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/auth_edittext"

            android:hint="@string/email_hint"
            android:inputType="textEmailAddress|textPersonName"
            android:lines="1"

            android:maxLines="1"
            android:paddingStart="@dimen/start_text_edittext" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_edittext"
            style="@style/whiteEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/auth_edittext"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/auth_edittext"

            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:lines="1"

            android:maxLines="1"
            android:paddingStart="@dimen/start_text_edittext" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/repeat_password_edittext"
            style="@style/whiteEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/auth_edittext"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/auth_edittext"

            android:hint="@string/repeat_password_hint"
            android:inputType="textPassword"
            android:lines="1"

            android:maxLines="1"
            android:paddingStart="@dimen/start_text_edittext" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/png_button_height"

            android:layout_marginStart="@dimen/auth_edittext"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/auth_edittext"
            android:layout_marginBottom="@dimen/layout_margin"

            android:background="@drawable/sign_up_button" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>